syntax =  "proto3";

package com.improving.app.member.domain;

import "com/improving/app/organization/domain/improving-app-organization-domain.proto";
import "com/improving/app/tenant/domain/improving-app-tenant-domain.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  no_default_values_in_constructor: true
  preserve_unknown_fields: false
};


//Data Model
message MemberId {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  string id = 1;
}

enum NotificationPreference {
  option (scalapb.enum_options).extends = "com.improving.app.common.serialize.PBEnumSerializable";
  NOTIFICATION_PREFERENCE_EMAIL = 0;
  NOTIFICATION_PREFERENCE_SMS = 1;
  NOTIFICATION_PREFERENCE_APPLICATION = 2;
}

enum MemberStatus {
  option (scalapb.enum_options).extends = "com.improving.app.common.serialize.PBEnumSerializable";
  MEMBER_STATUS_INITIAL = 0;
  MEMBER_STATUS_ACTIVE = 1;
  MEMBER_STATUS_INACTIVE = 2;
  MEMBER_STATUS_SUSPENDED = 3;
  MEMBER_STATUS_TERMINATED = 4;
}

message Contact {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  optional string email_address = 3;
  optional string phone = 4;
  string user_name = 5;
}

message MemberInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  string handle = 1;
  string avatar_url = 2;
  string first_name = 3;
  string last_name = 4;
  NotificationPreference notification_preference = 5;
  bool notification_opt_in = 6;
  Contact contact = 7;
  repeated organization.domain.OrganizationId organizations = 8;
  tenant.domain.TenantId tenant = 9;
}

message MemberMap {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  MemberId member_id = 1;
  MemberInfo member_info = 2;
}

message MemberMetaInfo {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  google.protobuf.Timestamp created_on = 1;
  MemberId created_by = 2;
  google.protobuf.Timestamp  last_modified_on = 3;
  MemberId last_modified_by = 4;
  MemberStatus member_state = 5;
}

//Requests
message RegisterMember {
  MemberInfo member_info = 1;
  MemberId acting_member = 2;
}

message ActivateMember {
  MemberId member_id = 1;
  MemberId acting_member = 2;
}

message InactivateMember {
  MemberId member_id = 1;
  MemberId acting_member = 2;
}

message SuspendMember {
  MemberId member_id = 1;
  MemberId acting_member = 2;
}

message TerminateMember {
  MemberId member_id = 1;
  MemberId acting_member =2;
}

message UpdateMemberInfo {
  MemberId member_id = 1;
  MemberInfo member_info = 2;
  MemberId acting_member = 3;
}

message GetMemberInfo {
  MemberId member_id = 1;
}

message MemberRequest{
  option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

  oneof sealed_value {
    RegisterMember register_member_value = 1;
    ActivateMember activate_member_value = 2;
    InactivateMember inactivate_member_value = 3;
    SuspendMember suspend_member_value = 4;
    TerminateMember terminate_member_value = 5;
    UpdateMemberInfo update_member_info_value = 6;
    GetMemberInfo get_member_info_value = 7;
  }
}

//Member Events
message MemberRegistered {
  MemberId member_id = 1;
  MemberInfo member_info =2;
  MemberId acting_member = 3;
  google.protobuf.Timestamp  event_time = 4;
}

message MemberActivated {
  MemberId member_id = 1;
  MemberId acting_member = 2;
  google.protobuf.Timestamp  event_time = 3;
}

message MemberInactivated {
  MemberId member_id = 1;
  MemberId acting_member = 2;
  google.protobuf.Timestamp  event_time = 3;
}

message MemberSuspended {
  MemberId member_id = 1;
  MemberId acting_member = 2;
  google.protobuf.Timestamp  event_time = 3;
}

message MemberTerminated {
  MemberId member_id = 1;
  MemberId acting_member = 2;
  google.protobuf.Timestamp  event_time = 3;
}

message MemberInfoUpdated {
  MemberId member_id = 1;
  MemberInfo member_info = 2;
  MemberId acting_member = 3;
  google.protobuf.Timestamp  event_time = 4;
}


message MemberEvent{

  option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

  oneof sealed_value {
    MemberRegistered member_registered_value = 1;
    MemberActivated member_activated_value = 2;
    MemberInactivated member_inactivated_value = 3;
    MemberSuspended member_suspended_value = 4;
    MemberTerminated member_terminated = 5;
    MemberInfoUpdated member_info_updated = 6;
  }
}

//MemberResponse
message MemberData {
  MemberId member_id = 1;
  MemberInfo member_info = 2;
  MemberMetaInfo member_meta_info = 3;
}

message MemberEventResponse {
  MemberEvent member_event = 1;
}

message MemberResponse {
  oneof sealed_value {
    MemberData member_state_value = 1;
    MemberEventResponse member_event_value = 2;
  }
}

//MemberState
message MemberState {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  MemberId member_id = 1;
  MemberInfo member_info = 2;
  MemberMetaInfo member_meta_info = 3;
}
